--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "js, calendar, test",
   "main": "index.js",
   "scripts": {
-    "dev" : "parcel index.html --no-source-map --open",
-    "pro" : "parcel build index.html --no-source-map --no-cache --publick-url"
+    "dev": "parcel index.html --no-source-maps --open",
+    "pro": "parcel build index.html --no-source-map --no-cache --publick-url"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
   "parcelCleanPaths": [
     "dist",
     ".cache"
-  ]
+  ],
+  "devDependencies": {
+    "sass": "^1.32.6"
+  }
 }
