--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AlexKrasnyi/Calendar#readme",
   "dependencies": {
+    "multiselect": "^0.9.12",
     "parcel-bundler": "^1.12.4"
   },
   "parcelCleanPaths": [
